@@ -4,6 +4,7 @@ import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.util.List;
 import java.util.Map.Entry;
+import java.util.stream.Collectors;
 
 import org.bukkit.Bukkit;
 import org.bukkit.Server;
@@ -11,8 +12,6 @@ import org.bukkit.command.CommandMap;
 import org.bukkit.command.ConsoleCommandSender;
 import org.bukkit.command.PluginCommand;
 import org.bukkit.plugin.java.JavaPlugin;
-
-import com.sun.source.util.Plugin;
 
 import lombok.Getter;
 
@@ -33,7 +32,7 @@ public class CommandsClass {
 	}
 	
 	public List<String> getRegisteredCommands() {
-		return mainCommand.getSubCommands().stream().map(Entry::getKey).toList();
+		return mainCommand.getSubCommands().stream().map(Entry::getKey).collect(Collectors.toList());
 	}
 	
 	public String getHelpForCommand(String command) {
@@ -61,7 +60,7 @@ public class CommandsClass {
 		} catch(UnsupportedOperationException e) {
 			try {
 				CommandMap commandMap = Bukkit.getCommandMap();
-				Constructor<PluginCommand> constructor = PluginCommand.class.getDeclaredConstructor(String.class, Plugin.class);
+				Constructor<PluginCommand> constructor = PluginCommand.class.getDeclaredConstructor(String.class, org.bukkit.plugin.Plugin.class);
 				constructor.setAccessible(true);
 				pcommand = constructor.newInstance(command, plugin);
 				commandMap.register(command, pcommand);
